# paramws-clients

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  run_tests.py
.github/workflows/: tests.yml
paramws/: run_tests.py
paramws/clients/: __init__.py  base_client.py  emsc_client.py  esm_client.py  rrsm_client.py  sequence.uml
paramws/clients/services/: __init__.py  baseconnector.py  basedatastructure.py  baseparser.py  feltreport_data.py  peakmotion_data.py  shakemap_data.py
paramws/clients/services/emsc/: feltreport_connector.py  feltreport_parser.py
paramws/clients/services/esm/: __init__.py  shakemap_connector.py  shakemap_parser.py
paramws/clients/services/rrsm/: __init__.py  peakmotion_connector.py  peakmotion_parser.py  shakemap_connector.py  shakemap_parser.py
paramws/tests/clients/: test_emsc_client.py  test_esm_client.py  test_rrsm_client.py
paramws/tests/parsers/: test_feltreport_parser.py  test_peakmotion_parser.py  test_shakemap_parser.py
paramws/tests/services/: test_base_ws.py  test_emsc_ws.py  test_esm_ws.py  test_rssm_ws.py
paramws/utils/: __init__.py  nested_get.py
tests/clients/: test_emsc_client.py  test_esm_client.py  test_rrsm_client.py
tests/parsers/: test_feltreport_parser.py  test_peakmotion_parser.py  test_shakemap_parser.py
tests/services/: test_base_ws.py  test_emsc_ws.py  test_esm_ws.py  test_rssm_ws.py
